--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
+<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
-      <Label id="_nameLabel" fx:id="_currentName" alignment="CENTER" layoutX="109.0" layoutY="53.0" prefHeight="68.0" prefWidth="242.0" stylesheets="@PracticeSceneStyleSheet.css" text="Name">
+      <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="109.0" layoutY="53.0" prefHeight="68.0" prefWidth="242.0" text="Name">
          <font>
             <Font size="48.0" />
          </font>
@@ -28,7 +28,7 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <JFXButton id="_playButton" fx:id="_playAllButton" buttonType="RAISED" layoutX="159.0" layoutY="143.0" onAction="#playAllClicked" prefHeight="47.0" prefWidth="153.0" stylesheets="@PracticeSceneStyleSheet.css" text="Play">
+      <JFXButton id="_button" fx:id="_playAllButton" buttonType="RAISED" layoutX="159.0" layoutY="143.0" onAction="#playAllClicked" prefHeight="47.0" prefWidth="153.0" text="Play">
          <font>
             <Font size="36.0" />
          </font>
@@ -40,7 +40,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_recordButton" fx:id="_recordButton" buttonType="RAISED" layoutX="567.0" layoutY="65.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
+      <JFXButton id="_button" fx:id="_recordButton" buttonType="RAISED" layoutX="567.0" layoutY="65.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
          <font>
             <Font size="36.0" />
          </font>
@@ -52,7 +52,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_playCurButton" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="466.0" layoutY="93.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
+      <JFXButton id="_button" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="466.0" layoutY="93.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
          <font>
             <Font size="14.0" />
          </font>
@@ -63,16 +63,16 @@
                </font>
             </Tooltip>
          </tooltip></JFXButton>
-      <JFXButton id="_saveCurButton" fx:id="_saveButton" buttonType="RAISED" layoutX="595.0" layoutY="93.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="119.0" text="Save">
+      <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" layoutX="595.0" layoutY="93.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="119.0" text="Save">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
       <JFXSlider fx:id="_volumeSlider" blockIncrement="1.0" layoutX="289.0" layoutY="294.0" onDragDone="#volumeSliderDragged" prefHeight="14.0" prefWidth="168.0" value="30.0" />
-      <JFXButton id="_prevButton" fx:id="_prevButton" buttonType="RAISED" layoutX="50.0" layoutY="154.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" stylesheets="@PracticeSceneStyleSheet.css" text="Previous">
+      <JFXButton id="_button" fx:id="_prevButton" buttonType="RAISED" layoutX="50.0" layoutY="154.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" text="Previous">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
-      <JFXButton id="_nextButton" fx:id="_nextButton" buttonType="RAISED" layoutX="341.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" stylesheets="@PracticeSceneStyleSheet.css" text="Next">
+      <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="341.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
          <font>
             <Font size="14.0" />
          </font>
@@ -85,7 +85,7 @@
          </tooltip>
       </JFXButton>
       <JFXProgressBar fx:id="_micSensitivityBar" layoutX="26.0" layoutY="301.0" />
-      <JFXButton id="_deleteCurButton" fx:id="_deleteButton" buttonType="RAISED" layoutX="731.0" layoutY="93.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@PracticeSceneStyleSheet.css" text="Delete">
+      <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="731.0" layoutY="93.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
          <font>
             <Font size="14.0" />
          </font>
@@ -103,12 +103,12 @@
                <content>
                   <Pane prefHeight="200.0" prefWidth="305.0">
                      <children>
-                        <ScrollPane fx:id="_recordingList" layoutY="3.0" prefHeight="307.0" prefWidth="303.0" />
+                        <ScrollPane id="_pane" fx:id="_recordingList" layoutY="3.0" prefHeight="307.0" prefWidth="303.0" />
                      </children></Pane>
                </content></Tab>
          </tabs>
       </JFXTabPane>
-      <JFXButton id="_playSelectedButton" fx:id="_playSelectedButton" buttonType="RAISED" layoutX="536.0" layoutY="519.0" onAction="#playSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Play Selected ">
+      <JFXButton id="_button" fx:id="_playSelectedButton" buttonType="RAISED" layoutX="536.0" layoutY="519.0" onAction="#playSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Play Selected ">
          <font>
             <Font size="14.0" />
          </font>
@@ -120,7 +120,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_deleteSelectedButton" fx:id="_deleteSelectedButton" buttonType="RAISED" layoutX="688.0" layoutY="519.0" onAction="#deleteSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Delete Selected">
+      <JFXButton id="_button" fx:id="_deleteSelectedButton" buttonType="RAISED" layoutX="688.0" layoutY="519.0" onAction="#deleteSelectedClicked" prefHeight="36.0" prefWidth="119.0" text="Delete Selected">
          <font>
             <Font size="14.0" />
          </font>
@@ -132,7 +132,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <Label id="_volumeLabel" layoutX="325.0" layoutY="243.0" prefHeight="36.0" prefWidth="96.0" stylesheets="@PracticeSceneStyleSheet.css" text="Volume" textAlignment="JUSTIFY">
+      <Label id="_label" layoutX="325.0" layoutY="243.0" prefHeight="36.0" prefWidth="96.0" text="Volume" textAlignment="JUSTIFY">
          <font>
             <Font size="24.0" />
          </font>
@@ -144,7 +144,7 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <Label layoutX="50.0" layoutY="243.0" prefHeight="36.0" prefWidth="180.0" text="Mic Sensitivity" textAlignment="JUSTIFY">
+      <Label id="_label" layoutX="50.0" layoutY="243.0" prefHeight="36.0" prefWidth="180.0" text="Mic Sensitivity" textAlignment="JUSTIFY">
          <font>
             <Font size="24.0" />
          </font>
@@ -157,12 +157,12 @@
          </tooltip>
       </Label>
       <JFXComboBox fx:id="_userRecordingDropdown" layoutX="220.0" layoutY="475.0" prefHeight="26.0" prefWidth="194.0" />
-      <Label id="_nameLabel" fx:id="_currentName1" alignment="CENTER" layoutX="55.0" layoutY="475.0" prefHeight="26.0" prefWidth="85.0" stylesheets="@PracticeSceneStyleSheet.css" text="Name">
+      <Label id="_label" fx:id="_currentName1" alignment="CENTER" layoutX="55.0" layoutY="475.0" prefHeight="26.0" prefWidth="85.0" text="Name">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_loop" layoutX="38.0" layoutY="404.0" onAction="#loopFiles" prefHeight="36.0" prefWidth="119.0" text="Loop">
+      <JFXButton id="_label" fx:id="_loop" layoutX="38.0" layoutY="404.0" onAction="#loopFiles" prefHeight="36.0" prefWidth="119.0" text="Loop">
          <font>
             <Font size="23.0" />
          </font>
