changed practice scene and css file, should work now

--- a/src/themes/PracticeSceneStyleSheet.css
+++ b/src/themes/PracticeSceneStyleSheet.css
@@ -1,5 +1,4 @@
-#_saveCurButton, #_recordButton, #_playCurButton, #_deleteCurButton, #_playSelectedButton, #_deleteSelectedButton, 
-#_playButton, #_nextButton, #_prevButton {
+#_button {
     -fx-background-color: lightgrey;
 }
 
