--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
+<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
       <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="109.0" layoutY="53.0" prefHeight="68.0" prefWidth="242.0" text="Name">
          <font>
@@ -99,7 +99,7 @@
       </JFXButton>
       <JFXTabPane layoutX="536.0" layoutY="150.0" prefHeight="338.0" prefWidth="303.0">
          <tabs>
-            <Tab text="Recordings ">
+            <Tab id="_tab" text="Recordings ">
                <content>
                   <Pane prefHeight="200.0" prefWidth="305.0">
                      <children>
@@ -167,6 +167,6 @@
             <Font size="23.0" />
          </font>
       </JFXButton>
-      <Spinner fx:id="_loopCount" layoutX="145.0" layoutY="414.0" prefHeight="26.0" prefWidth="66.0" />
+      <Spinner fx:id="_loopCount" layoutX="170.0" layoutY="414.0" prefHeight="26.0" prefWidth="66.0" />
    </children>
 </AnchorPane>
