--- a/src/application/ShopScene.fxml
+++ b/src/application/ShopScene.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane id="_background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@ShopSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ShopSceneController">
+<BorderPane id="_background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/ShopSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ShopSceneController">
    <left>
       <AnchorPane id="_themePane" prefHeight="465.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton id="_defaultThemeButton" fx:id="_defaultThemeButton" buttonType="RAISED" layoutX="67.0" layoutY="284.0" onAction="#defaultThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Default Theme" />
-            <Label id="_costLabel" alignment="CENTER" layoutX="99.0" layoutY="344.0" prefHeight="36.0" prefWidth="103.0" text="0 points">
+            <JFXButton id="_button" fx:id="_defaultThemeButton" buttonType="RAISED" layoutX="67.0" layoutY="284.0" onAction="#defaultThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Default Theme" />
+            <Label id="_label" alignment="CENTER" layoutX="99.0" layoutY="344.0" prefHeight="36.0" prefWidth="103.0" text="0 points">
                <font>
                   <Font size="14.0" />
                </font>
@@ -25,36 +25,36 @@
    <center>
       <AnchorPane id="_themePane" prefHeight="465.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Label id="_costLabel" alignment="CENTER" layoutX="99.0" layoutY="348.0" prefHeight="36.0" prefWidth="103.0" text="5 points">
+            <Label id="_label" alignment="CENTER" layoutX="99.0" layoutY="348.0" prefHeight="36.0" prefWidth="103.0" text="5 points">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <JFXButton id="_sunsetThemeButton" fx:id="_sunsetThemeButton" buttonType="RAISED" layoutX="74.0" layoutY="280.0" onAction="#sunsetThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Sunset Theme" />
+            <JFXButton id="_button" fx:id="_sunsetThemeButton" buttonType="RAISED" layoutX="74.0" layoutY="280.0" onAction="#sunsetThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Sunset Theme" />
          </children>
       </AnchorPane>
    </center>
    <right>
       <AnchorPane id="_themePane" prefHeight="465.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Label id="_costLabel" alignment="CENTER" layoutX="99.0" layoutY="345.0" prefHeight="36.0" prefWidth="103.0" text="10 points">
+            <Label id="_label" alignment="CENTER" layoutX="99.0" layoutY="345.0" prefHeight="36.0" prefWidth="103.0" text="10 points">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <JFXButton id="_darkThemeButton" fx:id="_darkThemeButton" buttonType="RAISED" layoutX="67.0" layoutY="276.0" onAction="#darkThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Dark Theme" />
+            <JFXButton id="_button" fx:id="_darkThemeButton" buttonType="RAISED" layoutX="67.0" layoutY="276.0" onAction="#darkThemeClicked" prefHeight="48.0" prefWidth="167.0" text="Dark Theme" />
          </children>
       </AnchorPane>
    </right>
    <top>
       <Pane id="_themePane" prefHeight="194.0" prefWidth="900.0" BorderPane.alignment="CENTER">
          <children>
-            <Label id="_shopLabel" alignment="CENTER" layoutX="261.0" layoutY="30.0" prefHeight="135.0" prefWidth="378.0" text="Shop" textAlignment="CENTER">
+            <Label id="_label" alignment="CENTER" layoutX="261.0" layoutY="30.0" prefHeight="135.0" prefWidth="378.0" text="Shop" textAlignment="CENTER">
                <font>
                   <Font size="74.0" />
                </font>
             </Label>
-            <Label fx:id="_pointLabel" layoutX="742.0" layoutY="82.0" prefHeight="48.0" prefWidth="82.0" text="Points">
+            <Label id="_label" fx:id="_pointLabel" layoutX="742.0" layoutY="82.0" prefHeight="48.0" prefWidth="82.0" text="Points">
                <font>
                   <Font size="24.0" />
                </font>
