--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import com.jfoenix.controls.JFXTabPane?>
@@ -14,9 +13,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
+<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
-      <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="109.0" layoutY="53.0" prefHeight="68.0" prefWidth="242.0" text="Name">
+      <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="37.0" layoutY="53.0" prefHeight="68.0" prefWidth="381.0" text="Name">
          <font>
             <Font size="48.0" />
          </font>
@@ -28,7 +27,7 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <JFXButton id="_button" fx:id="_playAllButton" buttonType="RAISED" layoutX="159.0" layoutY="143.0" onAction="#playAllClicked" prefHeight="47.0" prefWidth="153.0" text="Play">
+      <JFXButton id="_button" fx:id="_playAllButton" buttonType="RAISED" layoutX="151.0" layoutY="144.0" onAction="#playAllClicked" prefHeight="47.0" prefWidth="153.0" text="Play">
          <font>
             <Font size="36.0" />
          </font>
@@ -40,7 +39,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_button" fx:id="_recordButton" buttonType="RAISED" layoutX="567.0" layoutY="65.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
+      <JFXButton id="_button" fx:id="_recordButton" buttonType="RAISED" layoutX="99.0" layoutY="386.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" text="Record">
          <font>
             <Font size="36.0" />
          </font>
@@ -52,7 +51,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXButton id="_button" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="466.0" layoutY="93.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
+      <JFXButton id="_button" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="36.0" layoutY="407.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" text="Play">
          <font>
             <Font size="14.0" />
          </font>
@@ -63,7 +62,7 @@
                </font>
             </Tooltip>
          </tooltip></JFXButton>
-      <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" layoutX="595.0" layoutY="93.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="119.0" text="Save">
+      <JFXButton id="_button" fx:id="_saveButton" buttonType="RAISED" layoutX="165.0" layoutY="407.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="109.0" text="Save">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
@@ -72,7 +71,7 @@
          <font>
             <Font size="14.0" />
          </font></JFXButton>
-      <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="341.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
+      <JFXButton id="_button" fx:id="_nextButton" buttonType="RAISED" layoutX="318.0" layoutY="154.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" text="Next">
          <font>
             <Font size="14.0" />
          </font>
@@ -84,8 +83,8 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXProgressBar fx:id="_micSensitivityBar" layoutX="26.0" layoutY="301.0" />
-      <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="731.0" layoutY="93.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
+      <JFXProgressBar fx:id="_micSensitivityBar" layoutX="137.0" layoutY="506.0" />
+      <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="301.0" layoutY="407.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
          <font>
             <Font size="14.0" />
          </font>
@@ -144,9 +143,9 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <Label id="_label" layoutX="50.0" layoutY="243.0" prefHeight="36.0" prefWidth="180.0" text="Mic Sensitivity" textAlignment="JUSTIFY">
+      <Label id="_label" layoutX="93.0" layoutY="488.0" prefHeight="36.0" prefWidth="29.0" text="Mic" textAlignment="JUSTIFY">
          <font>
-            <Font size="24.0" />
+            <Font size="15.0" />
          </font>
          <tooltip>
             <Tooltip text="Your current mic sensitvity.">
@@ -156,17 +155,11 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <JFXComboBox fx:id="_userRecordingDropdown" layoutX="220.0" layoutY="475.0" prefHeight="26.0" prefWidth="194.0" />
-      <Label id="_label" fx:id="_currentName1" alignment="CENTER" layoutX="55.0" layoutY="475.0" prefHeight="26.0" prefWidth="85.0" text="Name">
-         <font>
-            <Font size="22.0" />
-         </font>
-      </Label>
-      <JFXButton id="_label" fx:id="_loop" layoutX="38.0" layoutY="404.0" onAction="#loopFiles" prefHeight="36.0" prefWidth="119.0" text="Loop">
+      <JFXButton id="_label" fx:id="_loop" layoutX="466.0" layoutY="20.0" onAction="#loopFiles" prefHeight="36.0" prefWidth="119.0" text="Loop">
          <font>
             <Font size="23.0" />
          </font>
       </JFXButton>
-      <Spinner fx:id="_loopCount" layoutX="145.0" layoutY="414.0" prefHeight="26.0" prefWidth="66.0" />
+      <Spinner fx:id="_loopCount" layoutX="573.0" layoutY="30.0" prefHeight="26.0" prefWidth="66.0" />
    </children>
 </AnchorPane>
