--- a/src/themes/DarkPracticeSceneStyleSheet.css
+++ b/src/themes/DarkPracticeSceneStyleSheet.css
@@ -1,11 +1,10 @@
-#_saveCurButton, #_recordButton, #_playCurButton, #_deleteCurButton, #_playSelectedButton, #_deleteSelectedButton, 
-#_playButton, #_nextButton, #_prevButton {
+#_button {
     -fx-background-color: rgb(50, 50, 50, 0.9);
 	-fx-text-fill: red;
 	-fx-accent: crimson;
 }
 
-#_recordingPane {
+#_pane {
 	-fx-background-color: rgb(80, 80, 80);
 }
 
@@ -13,10 +12,11 @@
 	-fx-background-color: black;
 }
 
-#_nameLabel, #_volumeLabel, #_micSensitivityLabel {
+#_label {
 	-fx-text-fill: red;
 }
 
+/**
 #_micSensitivityBar > .track, #_micSensitivityBar > .bar {
 	-fx-background-radius: 0;
 	-fx-background-insets: 0;
@@ -26,3 +26,4 @@
 #_volumeBar > .track, #_volumeBar > .slider {
 	-fx-control-inner-background: red;
 }
+*/
