--- a/src/themes/DarkSelectionSceneStyleSheet.css
+++ b/src/themes/DarkSelectionSceneStyleSheet.css
@@ -1,11 +1,10 @@
-#_pracButton, #_addToListButton, #_uploadButton, #_pracSelButton, #_removeSelButton, #_deleteSelButton, #_pracSelButton, 
-#_removeSelButton {
+#_button {
 	
 	-fx-background-color: rgb(50, 50, 50, 0.9);
 	-fx-text-fill: red;
 }
 
-#_practiceListPane, #_recordingListPane,  #_leftPane, #_leftAnchorPane, #_parentPracticePane, #_parentRecordingPane {
+#_pane {
 	-fx-background-color: rgb(80, 80, 80);
 }
 
@@ -18,7 +17,7 @@
 	-fx-background-color: rgb(80, 80, 80);
 }
 
-#_typeInANameLabel, #_pointLabel {
+#_label {
 	-fx-background-color: black;
 	-fx-text-fill: red;
 }
