--- a/src/themes/DarkShopSceneStyleSheet.css
+++ b/src/themes/DarkShopSceneStyleSheet.css
@@ -2,12 +2,12 @@
 	-fx-background-color: black;
 }
 
-#_defaultThemeButton, #_darkThemeButton, #_sunsetThemeButton {
+#_button {
 	-fx-background-color: rgb(50, 50, 50, 0.9);
 	-fx-text-fill: red;
 }
 
-#_shopLabel, #_costLabel, #_pointLabel {
+#_label {
 	-fx-background-color: black;
 	-fx-text-fill: red;
 }
