changed the color of the tab, still need pane and text

--- a/src/themes/DarkPracticeSceneStyleSheet.css
+++ b/src/themes/DarkPracticeSceneStyleSheet.css
@@ -16,6 +16,11 @@
 	-fx-text-fill: red;
 }
 
+.jfx-tab-pane .tab-header-background {
+	-fx-background-color: rgb(50, 50, 50);
+	-fx-insets: red;
+}
+
 /**
 #_micSensitivityBar > .track, #_micSensitivityBar > .bar {
 	-fx-background-radius: 0;
